# CTranspiler

./: CMakeLists.txt
src/: input.zk  main.c  output.c
src/generator/: generator.c  generator.h
src/lexer/: lexer.c  lexer.h
src/parser/: parser.c  parser.h
